--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "![Design preview for the Calculator app coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./style.css"
+    "sass": "sass --watch ./sass/main.scss:./css/style.css"
   },
   "author": "",
   "license": "ISC"
